fix: remove extra space on the sides of the table on mobile

--- a/src/style.less
+++ b/src/style.less
@@ -5897,6 +5897,8 @@ table th {
 
         @media (max-width: 620px) {
           float: none !important;
+          width: 100% !important;
+          margin: 0;
         }
 
         &>table {
